# tiny-games

./: Cargo.toml  README.md
src/: apps.rs  main.rs  ui.rs
src/apps/: conway.rs  noise.rs  particles.rs  race.rs  race_map.txt  snake.rs  tetris.rs
src/ui/: debug.rs  terminal.rs  window.rs
