[package]
name = "terminal-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
crossterm = { version = "0.25.0", features = ["event-stream"]}
ggez = "0.8.1"
tui = "0.19.0"
rand = "0.8.5"
